usuniecie zbednego nawiasu

--- a/kamienPapierNozyce/index.html
+++ b/kamienPapierNozyce/index.html
@@ -10,7 +10,7 @@
     <title>Kamień, papier, nożyce</title>
 </head>
 <body>
-    <h1>Gra: kamień, papier, nożyce</h1>>
+    <h1>Gra: kamień, papier, nożyce</h1>
     <div class="select">
         <h3>Proszę, wybierz:</h3>
         <img data-option="papier" class="first" src="img/papier.jpg" alt="" title="Papier">
